data/all_generated_tests/raw_wast_tests/call_indirect_StackCorruption_3991.wast
;; 10. **Table with Funcref but Invalid Types**:     Use `call_indirect` to index into a table of funcref types but insert invalid types that do not match any predefined function signatures. Verify proper trapping and ensure the operand stack remains in a valid state without corruption.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) 0)
    (func (param f32) (result f64)
      (f64.const 5.0)
    )
    (func (param i32) (result i32)
      (call_indirect (type 0) (i32.const 1) (i32.const 0))
    )
  )
  "type mismatch"
)